--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ header a {
     display: inline-block;
 }
 
+.preview-item:hover {
+    opacity: .8;
+}
+
 .preview-image {
     width: 100%;
     height: 95%;
@@ -67,22 +71,33 @@ header a {
 }
 
 .cstm-btn{
-    position: relative;
-    bottom: 110px;
-    width: 80% !important; 
-    /* left: 90px; */
-    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+    cursor: pointer;
+    height: 50px;
+    width: 80%;
+    letter-spacing: .5px;
+    line-height: 50px;
+    padding: 0 35px;
     opacity: .7;
     left: 10%;
     right: 10%;
     visibility: hidden;
-    height: 50px;
-    letter-spacing: .5px;
-    line-height: 50px;
-    padding: 0 35px;
-    font-size: 15px;
-    font-weight: bolder;
     justify-content: center;
+    top: 255px;
+    position: absolute;
+}
+
+.preview-item:hover .cstm-btn {
+    visibility: visible;
+    opacity: .95;
+}
+
+.cstm-btn:hover {
+    background-color: black;
+    color: white;
+    border: 1px solid #000;
 }
 
 .hat1 {
@@ -164,24 +179,7 @@ header a {
 .men4 {
     background-image: url(https://i.ibb.co/RvwnBL8/pink-shirt.png);
 }
-.cstm-btn{
-    position: relative;
-    bottom: 110px;
-    width: 80% !important; 
-    /* left: 90px; */
-    justify-content: center;
-    opacity: .7;
-    left: 10%;
-    right: 10%;
-    visibility: hidden;
-    height: 50px;
-    letter-spacing: .5px;
-    line-height: 50px;
-    padding: 0 35px;
-    font-size: 15px;
-    font-weight: bolder;
-    justify-content: center;
-}
+
 
 /*CHECKOUT PAGE*/
 .checkout-page {
@@ -203,4 +201,27 @@ header a {
 
 .header-block{
     width: 23%;
+}
+
+.checkout-item {
+    width: 100%;
+    display: flex;
+    min-height: 100px;
+    border-bottom: 1px solid #a9a9a9;
+    padding: 15px 0;
+    font-size: 20px;
+    align-items: center;
+}
+
+.total {
+    margin-top: 30px;
+    margin-left: auto;
+    font-size: 36px;
+}
+
+.test-warning {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 24px;
+    color: red;
 }
